tests/type/errors/bad_array_size1.xi
foo(): int { return foo() }

bar() {
  i: int[foo()]
  b: int["invalid"]
}
